# Specify sources
rnote_engine_sources = files(
    'document/background.rs',
    'document/format.rs',
    'document/mod.rs',
    'engine/export.rs',
    'engine/import.rs',
    'engine/mod.rs',
    'pens/brush.rs',
    'pens/eraser.rs',
    'pens/mod.rs',
    'pens/penbehaviour.rs',
    'pens/penholder.rs',
    'pens/penmode.rs',
    'pens/selector.rs',
    'pens/shaper.rs',
    'pens/shortcuts.rs',
    'pens/tools.rs',
    'pens/typewriter/mod.rs',
    'pens/typewriter/penevents.rs',
    'store/chrono_comp.rs',
    'store/keytree.rs',
    'store/mod.rs',
    'store/render_comp.rs',
    'store/selection_comp.rs',
    'store/stroke_comp.rs',
    'store/trash_comp.rs',
    'strokes/bitmapimage.rs',
    'strokes/brushstroke.rs',
    'strokes/mod.rs',
    'strokes/shapestroke.rs',
    'strokes/stroke.rs',
    'strokes/strokebehaviour.rs',
    'strokes/textstroke.rs',
    'strokes/vectorimage.rs',
    'audioplayer.rs',
    'camera.rs',
    'drawbehaviour.rs',
    'lib.rs',
    'render.rs',
    'utils.rs',
    'widgetflags.rs',
)
