# Specify sources
rnote_compose_sources = files(
    'builders/arrowbuilder.rs',
    'builders/buildable.rs',
    'builders/coordsystem2dbuilder.rs',
    'builders/coordsystem3dbuilder.rs',
    'builders/cubbezbuilder.rs',
    'builders/ellipsebuilder.rs',
    'builders/fociellipsebuilder.rs',
    'builders/gridbuilder.rs',
    'builders/linebuilder.rs',
    'builders/mod.rs',
    'builders/penpathcurvedbuilder.rs',
    'builders/penpathmodeledbuilder.rs',
    'builders/penpathsimplebuilder.rs',
    'builders/polygonbuilder.rs',
    'builders/polylinebuilder.rs',
    'builders/quadbezbuilder.rs',
    'builders/quadrantcoordsystem2dbuilder.rs',
    'builders/rectanglebuilder.rs',
    'color.rs',
    'constraints.rs',
    'eventresult.rs',
    'ext.rs',
    'lib.rs',
    'penevent.rs',
    'penpath/element.rs',
    'penpath/mod.rs',
    'penpath/segment.rs',
    'serialize.rs',
    'shapes/arrow.rs',
    'shapes/cubbez.rs',
    'shapes/ellipse.rs',
    'shapes/line.rs',
    'shapes/mod.rs',
    'shapes/polygon.rs',
    'shapes/polyline.rs',
    'shapes/quadbez.rs',
    'shapes/rectangle.rs',
    'shapes/shape.rs',
    'shapes/shapeable.rs',
    'splitorder.rs',
    'style/composer.rs',
    'style/indicators.rs',
    'style/mod.rs',
    'style/rough/mod.rs',
    'style/rough/roughoptions.rs',
    'style/smooth/mod.rs',
    'style/smooth/smoothoptions.rs',
    'style/textured/mod.rs',
    'style/textured/textureddotsdistribution.rs',
    'style/textured/texturedoptions.rs',
    'transform/mod.rs',
    'transform/transformable.rs',
    'utils.rs',
)
