# Specify sources
rnote_engine_sources = files(
    'document/background.rs',
    'document/format.rs',
    'document/mod.rs',
    'engine/export.rs',
    'engine/import.rs',
    'engine/mod.rs',
    'engine/rendering.rs',
    'engine/snapshot.rs',
    'engine/strokecontent.rs',
    'engine/visual_debug.rs',
    'fileformats/rnoteformat/maj0min5patch8.rs',
    'fileformats/rnoteformat/maj0min5patch9.rs',
    'fileformats/rnoteformat/maj0min6.rs',
    'fileformats/rnoteformat/maj0min9.rs',
    'fileformats/rnoteformat/mod.rs',
    'fileformats/mod.rs',
    'fileformats/xoppformat.rs',
    'pens/pensconfig/brushconfig.rs',
    'pens/pensconfig/eraserconfig.rs',
    'pens/pensconfig/mod.rs',
    'pens/pensconfig/selectorconfig.rs',
    'pens/pensconfig/shaperconfig.rs',
    'pens/pensconfig/toolsconfig.rs',
    'pens/pensconfig/typewriterconfig.rs',
    'pens/selector/mod.rs',
    'pens/selector/penevents.rs',
    'pens/typewriter/mod.rs',
    'pens/typewriter/penevents.rs',
    'pens/brush.rs',
    'pens/eraser.rs',
    'pens/mod.rs',
    'pens/penbehaviour.rs',
    'pens/penholder.rs',
    'pens/penmode.rs',
    'pens/shaper.rs',
    'pens/shortcuts.rs',
    'pens/tools.rs',
    'store/chrono_comp.rs',
    'store/keytree.rs',
    'store/mod.rs',
    'store/render_comp.rs',
    'store/selection_comp.rs',
    'store/stroke_comp.rs',
    'store/trash_comp.rs',
    'strokes/bitmapimage.rs',
    'strokes/brushstroke.rs',
    'strokes/textstroke.rs',
    'strokes/mod.rs',
    'strokes/shapestroke.rs',
    'strokes/stroke.rs',
    'strokes/content.rs',
    'strokes/vectorimage.rs',
    'audioplayer.rs',
    'camera.rs',
    'drawable.rs',
    'ext.rs',
    'lib.rs',
    'render.rs',
    'selectioncollision.rs',
    'tasks.rs',
    'utils.rs',
    'widgetflags.rs',
)
