# Specify sources
rnote_engine_sources = files(
    'audioplayer.rs',
    'camera.rs',
    'document/background.rs',
    'document/config.rs',
    'document/format.rs',
    'document/layout.rs',
    'document/mod.rs',
    'drawable.rs',
    'engine/animation.rs',
    'engine/config.rs',
    'engine/export.rs',
    'engine/import.rs',
    'engine/mod.rs',
    'engine/rendering.rs',
    'engine/snapshot.rs',
    'engine/strokecontent.rs',
    'engine/visual_debug.rs',
    'ext.rs',
    'fileformats/mod.rs',
    'fileformats/rnoteformat/maj0min5patch8.rs',
    'fileformats/rnoteformat/maj0min5patch9.rs',
    'fileformats/rnoteformat/maj0min6.rs',
    'fileformats/rnoteformat/maj0min9.rs',
    'fileformats/rnoteformat/mod.rs',
    'fileformats/xoppformat.rs',
    'lib.rs',
    'pens/brush.rs',
    'pens/eraser.rs',
    'pens/mod.rs',
    'pens/penbehaviour.rs',
    'pens/penholder.rs',
    'pens/penmode.rs',
    'pens/pensconfig/brushconfig.rs',
    'pens/pensconfig/eraserconfig.rs',
    'pens/pensconfig/mod.rs',
    'pens/pensconfig/selectorconfig.rs',
    'pens/pensconfig/shaperconfig.rs',
    'pens/pensconfig/toolsconfig.rs',
    'pens/pensconfig/typewriterconfig.rs',
    'pens/selector/mod.rs',
    'pens/selector/penevents.rs',
    'pens/shaper.rs',
    'pens/shortcuts.rs',
    'pens/tools/laser.rs',
    'pens/tools/mod.rs',
    'pens/tools/offsetcamera.rs',
    'pens/tools/verticalspace.rs',
    'pens/tools/zoom.rs',
    'pens/typewriter/mod.rs',
    'pens/typewriter/penevents.rs',
    'render.rs',
    'selectioncollision.rs',
    'snap.rs',
    'store/chrono_comp.rs',
    'store/keytree.rs',
    'store/mod.rs',
    'store/render_comp.rs',
    'store/selection_comp.rs',
    'store/stroke_comp.rs',
    'store/trash_comp.rs',
    'strokes/bitmapimage.rs',
    'strokes/brushstroke.rs',
    'strokes/content.rs',
    'strokes/mod.rs',
    'strokes/shapestroke.rs',
    'strokes/stroke.rs',
    'strokes/textstroke.rs',
    'strokes/vectorimage.rs',
    'tasks.rs',
    'utils.rs',
    'widgetflags.rs',
)
